dashdemux: ignore leading and trailing spaces in content protection's scheme ID URI

https://bugzilla.gnome.org/show_bug.cgi?id=758064